The mater-page layout pattern was changed

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -81,8 +81,8 @@
 			</div>
 		</nav>
 
-		<div class="container mt-3 px-lg-5">
-			<main role="main" class="pb-3 px-lg-5 mx-xl-5 mx-xxl-1">
+		<div class="container mt-3 px-md-5">
+			<main role="main" class="mainContent pb-3 px-lg-5">
 				@RenderBody()
 			</main>
 		</div>
