--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -3,15 +3,6 @@
 @{
 	ViewData["Title"] = "Calculation";
 	var diapasons = (ViewData["Diapasons"] as StructuredCablingStudioDiapasons)!;
-	double linkStep;
-	if (Model.IsStrictComplianceWithTheStandart)
-	{
-		linkStep = 1;
-	}
-	else
-	{
-		linkStep = 0.01;
-	}
 }
 
 <form id="calculateForm" asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.CalculateConfirmed)" method="post">
@@ -26,7 +17,7 @@
 		</div>
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<input class="form-control border-primary border-opacity-75" type="number" id="minPermanentLinkInput" step="@linkStep" min="@diapasons.MinPermanentLinkDiapason.Min" max="@diapasons.MinPermanentLinkDiapason.Max" asp-for="MinPermanentLink" required />
+				<input class="form-control border-primary border-opacity-75" type="number" id="minPermanentLinkInput" step="0.01" min="@diapasons.MinPermanentLinkDiapason.Min" max="@diapasons.MinPermanentLinkDiapason.Max" asp-for="MinPermanentLink" required />
 			</div>
 			<div class="col d-flex align-items-end ps-0">
 				<label class="form-label mb-1" for="minPermanentLinkInput">
@@ -46,7 +37,7 @@
 		</div>
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<input class="form-control border-primary border-opacity-75" type="number" id="maxPermanentLinkInput" step="@linkStep" min="@diapasons.MaxPermanentLinkDiapason.Min" max="@diapasons.MaxPermanentLinkDiapason.Max" asp-for="MaxPermanentLink" required />
+				<input class="form-control border-primary border-opacity-75" type="number" id="maxPermanentLinkInput" step="0.01" min="@diapasons.MaxPermanentLinkDiapason.Min" max="@diapasons.MaxPermanentLinkDiapason.Max" asp-for="MaxPermanentLink" required />
 			</div>
 			<div class="col d-flex align-items-end ps-0">
 				<label class="form-label mb-1" for="maxPermanentLinkInput">
@@ -102,7 +93,7 @@
 				@{
 					if (Model.IsCableHankMeterageAvailability)
 					{
-						<input class="form-control border-primary border-opacity-75" step="1" list="cableHankMeterageDatalist" id="cableHankMeterageInput" min="@diapasons.CableHankMeterageDiapason.Min" max="@diapasons.CableHankMeterageDiapason.Max" asp-for="CableHankMeterage" required/>
+						<input class="form-control border-primary border-opacity-75" step="1" list="cableHankMeterageDatalist" id="cableHankMeterageInput" min="@diapasons.CableHankMeterageDiapason.Min" max="@diapasons.CableHankMeterageDiapason.Max" asp-for="CableHankMeterage" required />
 					}
 					else
 					{
@@ -183,7 +174,7 @@
 					}
 					else
 					{
-						<input class="form-control border-primary border-opacity-75" type="number" id="technologicalReserveInput" asp-for="TechnologicalReserve" disabled />
+						<input class="form-control border-primary border-opacity-75" id="technologicalReserveInput" asp-for="TechnologicalReserve" disabled />
 					}
 				}
 			</div>
