Working changes on the Caclulate controller

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -5,7 +5,7 @@
 	var diapasons = (ViewData["Diapasons"] as StructuredCablingStudioDiapasons)!;
 }
 
-<form id="calculateForm" asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.CalculateConfirmed)" method="post">
+<form id="calculateForm" asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Calculate)" method="post">
 
 	<div class="mb-3">
 		<div class="row">
