--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -433,7 +433,7 @@
 	<div class="mb-3">
 		<div class="row">
 			<div class="col-auto">
-				<button type="submit" id="restoreDefaultsButton" class="btn btn-sm btn-outline-secondary">
+				<button type="button" id="restoreDefaultsButton" class="btn btn-sm btn-outline-secondary">
 					@Localizer["Restore defaults"]
 				</button>
 				<input type="hidden" id="approvedRestoreDefaultsInput" asp-for="ApprovedRestoreDefaults" />
@@ -467,7 +467,7 @@
 	<div class="mb-3">
 		<div class="row">
 			<div class="col-auto">
-				<button class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
+				<button type="button" class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
 					@Localizer["Save to TXT"]
 				</button>
 			</div>
