--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -1,9 +1,11 @@
 ﻿@using StructuredCablingStudioCore.Parameters
+@using StructuredCablingStudioCore;
 @using static System.Globalization.CultureInfo
 @model CalculateViewModel
 @{
 	ViewData["Title"] = "Calculation";
 	var diapasons = (ViewData["Diapasons"] as StructuredCablingStudioDiapasons)!;
+	var cablingConfiguration = (ViewData["CablingConfiguration"] as CablingConfiguration);
 }
 
 <form id="calculateForm" asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Calculate)" method="post">
@@ -458,8 +460,36 @@
 	<div class="mb-3">
 		<div class="row">
 			<div class="col">
-				<textarea id="configurationOutputTextArea" class="form-control border-primary" readonly rows="18">
-			</textarea>
+				<div id="configurationOutputdiv" class="form-control border-primary px-3 py-2">
+					@{
+						if(cablingConfiguration != null)
+						{
+							<p>
+								@Localizer["RecordTime"] @cablingConfiguration.RecordTime.ToShortDateString() @cablingConfiguration.RecordTime.ToLongTimeString()
+							</p>
+							<p>
+								<span>
+									@Localizer["MinPermanentLink"] @cablingConfiguration.MinPermanentLink.ToString("F2") @Localizer["m"]
+								</span>
+								<br>
+								<span>
+									@Localizer["MaxPermanentLink"] @cablingConfiguration.MaxPermanentLink.ToString("F2") @Localizer["m"]
+								</span>
+								<br>
+								<span>
+									@Localizer["AveragePermanentLink"] @cablingConfiguration.AveragePermanentLink.ToString("F2") @Localizer["m"]
+								</span>
+								<br>
+								<span>
+									@Localizer["AveragePermanentLink"] @cablingConfiguration.AveragePermanentLink.ToString("F2") @Localizer["m"]
+								</span>
+								<br>
+								<span>
+								</span>
+							</p>
+						}
+					}
+				</div>
 			</div>
 		</div>
 	</div>
