--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -22,8 +22,8 @@
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
 				<input class="form-control border-primary border-opacity-75" type="number" id="minPermanentLinkInput" step="0.01"
-				min="@diapasons.MinPermanentLinkDiapason.Min.ToString(InvariantCulture)" max="@diapasons.MinPermanentLinkDiapason.Max.ToString(InvariantCulture)"
-				asp-for="MinPermanentLink" required />
+		min="@diapasons.MinPermanentLinkDiapason.Min.ToString(InvariantCulture)" max="@diapasons.MinPermanentLinkDiapason.Max.ToString(InvariantCulture)"
+					   asp-for="MinPermanentLink" required />
 			</div>
 			<div class="col d-flex align-items-end ps-0">
 				<label class="form-label mb-1" for="minPermanentLinkInput">
@@ -44,8 +44,8 @@
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
 				<input class="form-control border-primary border-opacity-75" type="number" id="maxPermanentLinkInput" step="0.01"
-				min="@diapasons.MaxPermanentLinkDiapason.Min.ToString(InvariantCulture)" max="@diapasons.MaxPermanentLinkDiapason.Max.ToString(InvariantCulture)"
-				asp-for="MaxPermanentLink" required />
+		min="@diapasons.MaxPermanentLinkDiapason.Min.ToString(InvariantCulture)" max="@diapasons.MaxPermanentLinkDiapason.Max.ToString(InvariantCulture)"
+					   asp-for="MaxPermanentLink" required />
 			</div>
 			<div class="col d-flex align-items-end ps-0">
 				<label class="form-label mb-1" for="maxPermanentLinkInput">
@@ -66,8 +66,8 @@
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
 				<input class="form-control border-primary border-opacity-75" id="numberOfWorkplacesInput" step="1"
-				min="@diapasons.NumberOfWorkplacesDiapason.Min.ToString(InvariantCulture)" max="@diapasons.NumberOfWorkplacesDiapason.Max.ToString(InvariantCulture)"
-				asp-for="NumberOfWorkplaces" required />
+		min="@diapasons.NumberOfWorkplacesDiapason.Min.ToString(InvariantCulture)" max="@diapasons.NumberOfWorkplacesDiapason.Max.ToString(InvariantCulture)"
+					   asp-for="NumberOfWorkplaces" required />
 			</div>
 		</div>
 	</div>
@@ -82,9 +82,9 @@
 		</div>
 		<div class="row">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<input class="form-control border-primary border-opacity-75" id="numberOfPortsInput" step="1" 
-				min="@diapasons.NumberOfPortsDiapason.Min.ToString(InvariantCulture)" max="@diapasons.NumberOfPortsDiapason.Max.ToString(InvariantCulture)"
-				asp-for="NumberOfPorts" required />
+				<input class="form-control border-primary border-opacity-75" id="numberOfPortsInput" step="1"
+		min="@diapasons.NumberOfPortsDiapason.Min.ToString(InvariantCulture)" max="@diapasons.NumberOfPortsDiapason.Max.ToString(InvariantCulture)"
+					   asp-for="NumberOfPorts" required />
 			</div>
 		</div>
 	</div>
@@ -106,8 +106,8 @@
 					if (Model.IsCableHankMeterageAvailability)
 					{
 						<input class="form-control border-primary border-opacity-75" step="1" list="cableHankMeterageDatalist" id="cableHankMeterageInput"
-						min="@diapasons.CableHankMeterageDiapason.Min.ToString(InvariantCulture)" max="@diapasons.CableHankMeterageDiapason.Max.ToString(InvariantCulture)"
-						asp-for="CableHankMeterage" required />
+			min="@diapasons.CableHankMeterageDiapason.Min.ToString(InvariantCulture)" max="@diapasons.CableHankMeterageDiapason.Max.ToString(InvariantCulture)"
+					   asp-for="CableHankMeterage" required />
 					}
 					else
 					{
@@ -185,8 +185,8 @@
 					if (Model.IsTechnologicalReserveAvailability)
 					{
 						<input class="form-control border-primary border-opacity-75" type="number" step="0.01"
-						min="@diapasons.TechnologicalReserveDiapason.Min.ToString(InvariantCulture)" max="@diapasons.TechnologicalReserveDiapason.Max.ToString(InvariantCulture)"
-						id="technologicalReserveInput" asp-for="TechnologicalReserve" required />
+			min="@diapasons.TechnologicalReserveDiapason.Min.ToString(InvariantCulture)" max="@diapasons.TechnologicalReserveDiapason.Max.ToString(InvariantCulture)"
+			id="technologicalReserveInput" asp-for="TechnologicalReserve" required />
 					}
 					else
 					{
@@ -463,7 +463,7 @@
 			<div class="col">
 				<div id="configurationOutputdiv" class="form-control border-primary px-4 py-3">
 					@{
-						if(cablingConfiguration != null)
+						if (cablingConfiguration != null)
 						{
 							<p>
 								@Localizer["RecordTime"]&ensp;@cablingConfiguration.RecordTime.ToShortDateString() @cablingConfiguration.RecordTime.ToLongTimeString()
@@ -489,14 +489,14 @@
 									@Localizer["NumberOfPorts"]&ensp;<span class="fw-semibold">@cablingConfiguration.NumberOfPorts.ToString()</span>
 								</span>
 								<br>
-								@if(cablingConfiguration.CableQuantity != null)
+								@if (cablingConfiguration.CableQuantity != null)
 								{
 									<span>
 										@Localizer["CableQuantity"]&ensp;<span class="fw-semibold">@cablingConfiguration.CableQuantity.Value.ToString("F2")&nbsp;@Localizer["m"]</span>
 									</span>
 									<br>
 								}
-								@if(cablingConfiguration.CableHankMeterage != null)
+								@if (cablingConfiguration.CableHankMeterage != null)
 								{
 									<span>
 										@Localizer["CableHankMeterage"]&ensp;<span class="fw-semibold">@cablingConfiguration.CableHankMeterage.Value.ToString()&nbsp;@Localizer["m"]</span>
@@ -516,8 +516,8 @@
 								</span>
 							</p>
 							if (!IsNullOrEmpty(cablingConfiguration.Recommendations["Insulation Type"]) &&
-								!IsNullOrEmpty(cablingConfiguration.Recommendations["Insulation Material"]) &&
-								!IsNullOrEmpty(cablingConfiguration.Recommendations["Shielding"]))
+							!IsNullOrEmpty(cablingConfiguration.Recommendations["Insulation Material"]) &&
+							!IsNullOrEmpty(cablingConfiguration.Recommendations["Shielding"]))
 							{
 								<p>
 									<br>
@@ -554,17 +554,35 @@
 		</div>
 	</div>
 
-	<div class="mb-3">
-		<div class="row">
-			<div class="col-auto">
-				<button type="button" class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
+</form>
+
+<div class="mb-3">
+	<div class="row">
+		<div class="col-auto">
+			@if (cablingConfiguration != null)
+			{
+				var serializeroptions = new System.Text.Json.JsonSerializerOptions
+				{
+					WriteIndented = true,
+					ReferenceHandler = System.Text.Json.Serialization.ReferenceHandler.Preserve,
+				};
+
+				<form asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.SaveToTXT)" method="post">
+					<input type="hidden" name="serializedCablingConfiguration" value="@System.Text.Json.JsonSerializer.Serialize(cablingConfiguration, serializeroptions)">
+					<button type="submit" class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
+						@Localizer["Save to TXT"]
+					</button>
+				</form>
+			}
+			else
+			{
+				<button class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0" disabled>
 					@Localizer["Save to TXT"]
 				</button>
-			</div>
+			}
 		</div>
 	</div>
-
-</form>
+</div>
 
 @await Html.PartialAsync("_PleaseWaitPartial")
 
