--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -126,6 +126,6 @@
 	</div>
 </div>
 
-@await Html.PartialAsync("_PleaseWaitPartial")
+@await Html.PartialAsync("_LoadingOverlayPartial")
 
 <script src="~/js/Calculate.js" asp-append-version="true"></script>
