--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
 			</div>
 		</nav>
 
-		<div class="container mt-3 px-md-5">
+		<div id="mainContainerDiv" class="container mt-3 px-md-5">
 			<main role="main" class="mainContent pb-3 px-lg-5">
 				@RenderBody()
 			</main>
