--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml.css
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml.css
@@ -1,9 +1,4 @@
-﻿#configurationOutputdiv {
-    min-height: 28rem;
-    font-size: 1.05rem;
-}
-
-.formLoading {
+﻿.formLoading {
     opacity: 0.5;
     pointer-events: none;
 }
