--- a/Structured Cabling Studio/Views/Calculation/_ConfigurationDisplayPartial.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/_ConfigurationDisplayPartial.cshtml
@@ -102,9 +102,18 @@
 		<div class="col-auto">
 			@if (Model != null)
 			{
-				<button class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
-					@Localizer["Save to TXT"]
-				</button>
+				var serializeroptions = new System.Text.Json.JsonSerializerOptions
+				{
+					WriteIndented = true,
+					ReferenceHandler = System.Text.Json.Serialization.ReferenceHandler.Preserve,
+				};
+
+				<form asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.SaveToTXT)" method="post">
+					<input type="hidden" name="serializedCablingConfiguration" value="@System.Text.Json.JsonSerializer.Serialize(Model, serializeroptions)">
+					<button type="submit" class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
+						@Localizer["Save to TXT"]
+					</button>
+				</form>
 			}
 			else
 			{
