Work on the History page is ongoing

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -2,6 +2,6 @@
 	ViewData["Title"] = "History";
 }
 
-<p>
-	The history page
-</p>
+<h5 class="d-sm-none">
+	@Localizer["Welcome,"] <span id="eMailDisplayHistoryPageSpan" class="text-primary">@User.Identity!.Name</span>!
+</h5>
