Work on the History page is ongoing

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -5,3 +5,11 @@
 <h5 class="d-sm-none">
 	@Localizer["Welcome,"] <span id="eMailDisplayHistoryPageSpan" class="text-primary">@User.Identity!.Name</span>!
 </h5>
+
+<div id="configurationsListBoxDiv">
+</div>
+
+<div id="configurationHistoryDisplayDiv">
+</div>
+
+<script src="~/js/History.js" asp-append-version="true"></script>
