--- a/Structured Cabling Studio/Views/Calculation/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using StructuredCablingStudio.Models.ViewModels.CalculationViewModels
-@using StructuredCablingStudioCore;
+@using StructuredCablingStudioCore
+@using StructuredCablingStudio.Data.Entities
