--- a/Structured Cabling Studio/Views/Calculation/History.cshtml.css
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml.css
@@ -1,3 +1,7 @@
 ﻿#eMailDisplayHistoryPageSpan {
-    word-break: break-all;
+    word-break: break-word;
+}
+
+.historyPageButton {
+    width: 100%;
 }
