--- a/Structured Cabling Studio/Views/Calculation/_ConfigurationsListPartial.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/_ConfigurationsListPartial.cshtml
@@ -2,33 +2,35 @@
 
 <div class="row">
 	<div class="col-8 col-sm-9 col-xxl-10">
-		<ul>
-			@foreach (var configuration in Model)
-			{
-				<li>
-					<div>
+		<div class="form-control border-primary" id="configurationsListUlDiv">
+			<ul>
+				@foreach (var configuration in Model)
+				{
+					<li>
 						<div>
-							@configuration.RecordTime.ToShortDateString() @configuration.RecordTime.ToLongTimeString()
-						</div>
-						<div>
-							@Localizer["MinPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
-						</div>
-						<div>
-							@Localizer["MaxPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
-						</div>
-						@if (configuration.HankQuantity != null)
-						{
 							<div>
-								@Localizer["HankQuantity"] @configuration.HankQuantity.Value.ToString()
+								@configuration.RecordTime.ToShortDateString() @configuration.RecordTime.ToLongTimeString()
 							</div>
-						}
-						<div>
-							@Localizer["CableQuantity"] @configuration.TotalCableQuantity.ToString("F2") @Localizer["m"]
+							<div>
+								@Localizer["MinPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
+							</div>
+							<div>
+								@Localizer["MaxPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
+							</div>
+							@if (configuration.HankQuantity != null)
+							{
+								<div>
+									@Localizer["HankQuantity"] @configuration.HankQuantity.Value.ToString()
+								</div>
+							}
+							<div>
+								@Localizer["CableQuantity"] @configuration.TotalCableQuantity.ToString("F2") @Localizer["m"]
+							</div>
 						</div>
-					</div>
-				</li>
-			}
-		</ul>
+					</li>
+				}
+			</ul>
+		</div>
 	</div>
 	<div class="col">
 		<button class="historyPageButton btn btn-outline-primary mb-2">
