Work on the History page is ongoing

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -2,7 +2,7 @@
 	ViewData["Title"] = "History";
 }
 
-<h5 class="d-sm-none">
+<h5 class="d-sm-none mb-4">
 	@Localizer["Welcome,"] <span id="eMailDisplayHistoryPageSpan" class="text-primary">@User.Identity!.Name</span>!
 </h5>
 
