--- a/Structured Cabling Studio/Views/Configurations/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/Configurations/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using StructuredCablingStudio.Models.ViewModels.CalculationViewModels
+﻿@using StructuredCablingStudio.Models.ViewModels.ConfigurationsViewModels
 @using StructuredCablingStudioCore
 @using StructuredCablingStudio.Data.Entities
