Work on the calculate page is ongoing

--- a/Structured Cabling Studio/Views/Configurations/_ConfigurationsListPartial.cshtml
+++ b/Structured Cabling Studio/Views/Configurations/_ConfigurationsListPartial.cshtml
@@ -34,15 +34,15 @@
 			</div>
 		</div>
 		<div class="col-11 col-sm">
-			<button class="historyPageButton btn btn-outline-primary mb-2">
+			<button id="saveToTxtButton" class="historyPageButton btn btn-outline-primary mb-2">
 				@Localizer["Save to TXT"]
 			</button>
 			<br />
-			<button class="historyPageButton btn btn-outline-primary mb-2">
+			<button id="deleteButton" class="historyPageButton btn btn-outline-primary mb-2">
 				@Localizer["Delete"]
 			</button>
 			<br />
-			<button class="historyPageButton btn btn-outline-primary mb-2">
+			<button id="deleteAllButton" class="historyPageButton btn btn-outline-primary mb-2">
 				@Localizer["Delete all"]
 			</button>
 			<br />
