Work on the calculate page is ongoing

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -9,6 +9,8 @@
 <div id="configurationsListBoxDiv">
 </div>
 
+<input type="hidden" id="selectedConfigurationId"/>
+
 <div id="configurationHistoryDisplayDiv">
 </div>
 
